# al-stopping-conditions

./: .gitconfig  .gitignore  .gitmodules  Bias.ipynb  Datasets.ipynb  Pareto_plots.ipynb  README.md  abalone.ipynb  adversarial_batch.ipynb  adversarial_comparison.ipynb  adversarial_distance_metric.ipynb  aggregate disabling.ipynb  all_datasets.ipynb  banknote.ipynb  batch_size.ipynb  beam_search.ipynb  bias.ipynb  biased_active.ipynb  biased_train.ipynb  checker.py  chem.ipynb  classification_change.ipynb  classifiers.ipynb  compressed_store_pickle.ipynb  cont_test.ipynb  decision_tree.ipynb  deepfool_distance_metrics.ipynb  deepfool_logits.ipynb  deepfool_perf.ipynb  density.ipynb  derivatives_again.ipynb  digits.ipynb  digits_modal.ipynb  ee_online.ipynb  expected_error_bad.ipynb  experimenting 2.ipynb  experimenting.ipynb  final_time_est.ipynb  first_acc_metric.ipynb  fitted_saturation_estimation.ipynb  (+109 more)
Experiments/: data.csv  experiment_angle_0.25_method_deepfool.csv  experiment_angle_0.25_method_deepfool_stderr.csv  experiment_angle_0.25_method_fgm.csv  experiment_angle_0.25_method_fgm_stderr.csv  experiment_angle_0.25_method_random_batch.csv  experiment_angle_0.25_method_random_batch_stderr.csv  experiment_angle_0.25_method_uncertainty_batch_sampling.csv  experiment_angle_0.25_method_uncertainty_batch_sampling_stderr.csv  experiment_angle_0.25_method_uncertainty_id.csv  experiment_angle_0.25_method_uncertainty_id_stderr.csv  experiment_angle_0.5_method_deepfool.csv  experiment_angle_0.5_method_deepfool_stderr.csv  experiment_angle_0.5_method_fgm.csv  experiment_angle_0.5_method_fgm_stderr.csv  experiment_angle_0.5_method_random_batch.csv  experiment_angle_0.5_method_random_batch_stderr.csv  experiment_angle_0.5_method_uncertainty_batch_sampling.csv  experiment_angle_0.5_method_uncertainty_batch_sampling_stderr.csv  experiment_angle_0.5_method_uncertainty_id.csv  experiment_angle_0.5_method_uncertainty_id_stderr.csv  experiment_angle_0.75_method_deepfool.csv  experiment_angle_0.75_method_deepfool_stderr.csv  experiment_angle_0.75_method_fgm.csv  experiment_angle_0.75_method_fgm_stderr.csv  experiment_angle_0.75_method_random_batch.csv  experiment_angle_0.75_method_random_batch_stderr.csv  experiment_angle_0.75_method_uncertainty_batch_sampling.csv  experiment_angle_0.75_method_uncertainty_batch_sampling_stderr.csv  experiment_angle_0.75_method_uncertainty_id.csv  experiment_angle_0.75_method_uncertainty_id_stderr.csv  experiment_angle_0_method_deepfool.csv  experiment_angle_0_method_deepfool_stderr.csv  experiment_angle_0_method_fgm.csv  experiment_angle_0_method_fgm_stderr.csv  experiment_angle_0_method_random_batch.csv  (+492 more)
Imitate/: datasets.py
(+50 files in other folders)
