[tool.poetry]
name = "research"
version = "0.1.0"
description = "A summer research project at the University of Auckland (2020/2021)"
authors = ["Zac Pullar-Strecker <zacmps@gmail.com>"]
license = "GPLv2"

[tool.poetry.dependencies]
python = "^3.7.1,<3.9"
adversarial-robustness-toolbox = "^1.5.1"
secml = {git = "https://gitlab.com/secml/secml.git"}
modAL = "^0.4.1"
sklearn = "^0.0"
tqdm = "^4.56.0"
joblib = "^1.0.0"
matplotlib = "^3.3.3"
numpy = "^1.19.5"
scipy = "^1.6.0"
pandas = "^1.2.0"
celluloid = "^0.2.0"
tabulate = "^0.8.7"
cvxpy = {version = "^1.1.7", optional = true}
Mosek = {version = "^9.2.35", optional = true}
requests = "^2.25.1"
statsmodels = "^0.12.2"
psutil = "^5.8.0"
dill = "^0.3.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
